--- a/GridAwareEVMobile/package.json
+++ b/GridAwareEVMobile/package.json
@@ -17,17 +17,22 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "d3-shape": "^3.2.0",
     "expo": "~51.0.22",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "express": "^4.19.2",
     "nativewind": "^2.0.11",
+    "pg": "^8.12.0",
     "pretty-format": "^29.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -38,8 +43,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.5.0",
     "react-native-web": "~0.19.10",
-    "tailwind-rn": "^4.2.0",
-    "expo-linear-gradient": "~13.0.2"
+    "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
