--- a/GridAwareEVMobile/package.json
+++ b/GridAwareEVMobile/package.json
@@ -38,6 +38,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.74.3",
+    "react-native-ble-manager": "^11.5.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
@@ -45,7 +46,8 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.5.0",
     "react-native-web": "~0.19.10",
-    "tailwind-rn": "^4.2.0"
+    "tailwind-rn": "^4.2.0",
+    "expo-dev-client": "~4.0.25"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
