--- a/GridAwareEVMobile/package.json
+++ b/GridAwareEVMobile/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -42,8 +42,10 @@
     "react-dom": "18.2.0",
     "react-native": "^0.74.3",
     "react-native-ble-manager": "^11.5.5",
+    "react-native-ble-plx": "^3.2.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-permissions": "^4.1.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
