--- a/GridAwareEVMobile/package.json
+++ b/GridAwareEVMobile/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.4",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "buffer": "^6.0.3",
     "d3-shape": "^3.2.0",
     "expo": "~51.0.22",
     "expo-constants": "~16.0.2",
@@ -51,7 +52,8 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.5.0",
     "react-native-web": "~0.19.10",
-    "tailwind-rn": "^4.2.0"
+    "tailwind-rn": "^4.2.0",
+    "victory-native": "^41.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
