--- a/GridAwareEVMobile/package.json
+++ b/GridAwareEVMobile/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/native": "^6.0.2",
+    "@shopify/react-native-skia": "1.2.3",
     "axios": "^1.7.4",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -50,7 +51,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.5.0",
+    "react-native-svg": "15.2.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-web": "~0.19.10",
     "tailwind-rn": "^4.2.0",
     "victory-native": "^41.4.0"
