--- a/GridAwareEVMobile/package.json
+++ b/GridAwareEVMobile/package.json
@@ -47,12 +47,12 @@
     "react-native-ble-plx": "^3.2.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-gifted-charts": "^1.4.44",
+    "react-native-gifted-charts": "^1.4.45",
     "react-native-permissions": "^4.1.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-svg": "^15.2.0",
     "react-native-web": "~0.19.10",
     "tailwind-rn": "^4.2.0"
   },
