--- a/GridAwareEVMobile/app.json
+++ b/GridAwareEVMobile/app.json
@@ -73,8 +73,7 @@
       "eas": {
         "projectId": "c7fd3b43-0b76-4de2-a871-894d700146bd"
       },
-      "API_KEY": "nSCBzZ6LnWiVOUYPzB3AipGKmnh4Gk9OSLiOXypaUgM=",
-      "jsEngine": "jsc"
+      "API_KEY": "nSCBzZ6LnWiVOUYPzB3AipGKmnh4Gk9OSLiOXypaUgM="
     }
   }
 }
