--- a/GridAwareEVMobile/package.json
+++ b/GridAwareEVMobile/package.json
@@ -3,7 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -42,7 +42,7 @@
     "pretty-format": "^29.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.74.3",
+    "react-native": "0.74.5",
     "react-native-ble-manager": "^11.5.5",
     "react-native-ble-plx": "^3.2.1",
     "react-native-chart-kit": "^6.12.0",
