--- a/GridAwareEVMobile/package.json
+++ b/GridAwareEVMobile/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/datetimepicker": "^8.0.1",
     "@react-navigation/native": "^6.0.2",
     "@shopify/react-native-skia": "1.2.3",
     "axios": "^1.7.4",
