--- a/GridAwareEVMobile/package.json
+++ b/GridAwareEVMobile/package.json
@@ -44,6 +44,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-bcrypt": "^2.4.0",
     "react-native-ble-manager": "^11.5.5",
     "react-native-ble-plx": "^3.2.1",
     "react-native-chart-kit": "^6.12.0",
