--- a/GridAwareEVMobile/package.json
+++ b/GridAwareEVMobile/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "buffer": "^6.0.3",
+    "crypto-js": "^4.2.0",
     "d3-shape": "^3.2.0",
     "expo": "~51.0.22",
     "expo-constants": "~16.0.2",
